Change env-file key's names

--- a/config/.env.prod
+++ b/config/.env.prod
@@ -1,6 +1,6 @@
-db_name = django-polls-db
-user_name = postgres
-password = 1234
-admin_email = admin@gmail.com
-admin_password = 1234
-admin_username = admin
+POSTGRES_DB = django-polls-db
+POSTGRES_USER = postgres
+POSTGRES_PASSWORD = 1234
+DJANGO_SUPERUSER_EMAIL = admin@gmail.com
+DJANGO_SUPERUSER_PASSWORD = 1234
+DJANGO_SUPERUSER_USERNAME = admin
