Now docker-compose.yml know about config file. You haven't required to give path to env-file to  "docker-compose up" command  clearly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,8 @@ services:
     image: postgres
     volumes:
       - ./data/db:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: ${user_name}
-      POSTGRES_PASSWORD: ${password}
-      POSTGRES_DB: ${db_name}
+    env_file:
+      - config/.env.prod
     restart: always
 
   mysite:
@@ -21,13 +19,8 @@ services:
       - ./mysite:/app
     ports:
       - "8000:8000"
-    environment:
-      POSTGRES_USER: ${user_name}
-      POSTGRES_PASSWORD: ${password}
-      POSTGRES_DB: ${db_name}
-      DJANGO_SUPERUSER_EMAIL: ${admin_email}
-      DJANGO_SUPERUSER_PASSWORD: ${admin_password}
-      DJANGO_SUPERUSER_USERNAME: ${admin_username}
+    env_file:
+      - config/.env.prod
     depends_on:
       - database
     restart: always
